--- a/index.html
+++ b/index.html
@@ -4,19 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./access/style.css">
+    <link rel="stylesheet" href="./access/responsive.css">
+    <link rel="shortcut icon" href="./access/img/Logo - mpc - gs.png" type="image/x-icon">
     <title>Web Design Product</title>
 </head>
 <body>
     <div id="main">
         <div id="navbar">
-
+            <div class="logo">
+                <img src="./access/img/Logo_LTDD - Copy.png" alt="">
+            </div>
+            <div class="login">
+                <button>
+                    Login
+                </button>
+            </div>
         </div>
         <div id="content">
-            
+            <div class="pic">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
         </div>
         <div id="footer">
 
         </div>
     </div>
+    <script src="./access/main.js"></script>
 </body>
 </html>
