--- a/login.html
+++ b/login.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./access/style_login.css">
+    <title>Login</title>
 </head>
 <body>
-    
+    <div id="box">
+        <div id="login">
+            <label for="name">Name</label>
+            <input type="text" placeholder="Your Name">
+            <label for="pass">Password</label>
+            <input type="password" placeholder="Your Password">
+        </div>
+        <div id="register">
+            <label for="email">Email</label>
+            <input type="text" placeholder="Your Email">
+            <label for="user">UserName</label>
+            <input type="text" placeholder="Your Username">
+            <label for="pass">Password</label>
+            <input type="password" placeholder="Your Password">
+        </div>
+    </div>
 </body>
 </html>
