--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             </div>
                 <div class="login">
                 <button>
-                    Login
+                    <a href="/login.html">Login</a>
                 </button>
             </div>
         </div>
         <div id="content">
-            <h1>Sản phẩm Webdesign</h1>
+            <h1>Sản phẩm Web Design</h1>
             <div class="pic">
                 <div class="team">
                     <img src="./access/img/Beast.png" alt="">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="team">
-                    <img src="" alt="">
+                    <img src="./access/img/Film24h.png" alt="">
                     <div class="heart">
                         <a href="">Thien123</a>
                         <i class="fa-regular fa-heart"></i>
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="team">
-                    <img src="" alt="">
+                    <img src="./access/img/Cinema.png" alt="">
                     <div class="heart">
                         <a href="">Thien123</a>
                         <i class="fa-regular fa-heart"></i>
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div id="footer">
-
+            <h6>Copyright © <a href="https://thien0709.github.io/NIIS/">NIIS</a></h6>
         </div>
     </div>
     <script src="./access/main.js"></script>
