--- a/login.html
+++ b/login.html
@@ -14,6 +14,8 @@
             <input type="text" placeholder="Your Name">
             <label for="pass">Password</label>
             <input type="password" placeholder="Your Password">
+            <button><a href="./index.html">Login</a></button>
+            <h6>Don't have a account</h6>
         </div>
         <div id="register">
             <label for="email">Email</label>
@@ -22,6 +24,8 @@
             <input type="text" placeholder="Your Username">
             <label for="pass">Password</label>
             <input type="password" placeholder="Your Password">
+            <button><a href="./index.html">Register</a></button>
+            <h6>Have a account</h6>
         </div>
     </div>
 </body>
