--- a/login.html
+++ b/login.html
@@ -8,8 +8,10 @@
     <title>Login</title>
 </head>
 <body>
-    <div id="box">
+    <div id="box">            
+        <div class="change"></div>
         <div id="login">
+            <h1>Login</h1>
             <label for="name">Name</label>
             <input type="text" placeholder="Your Name">
             <label for="pass">Password</label>
@@ -18,6 +20,7 @@
             <h6>Don't have a account</h6>
         </div>
         <div id="register">
+            <h1>Register</h1>
             <label for="email">Email</label>
             <input type="text" placeholder="Your Email">
             <label for="user">UserName</label>
@@ -28,5 +31,6 @@
             <h6>Have a account</h6>
         </div>
     </div>
+    <script src="./access/login.js"></script>
 </body>
 </html>
