--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./access/style_login.css">
+    <link rel="shortcut icon" href="./access/img/icons8-login-100.png" type="image/x-icon">
     <title>Login</title>
 </head>
 <body>
