--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
                 <div class="login">
                 <button>
-                    <a href="/login.html">Login</a>
+                    <a href="./login.html">Login</a>
                 </button>
             </div>
         </div>
